--- a/app.json
+++ b/app.json
@@ -1,19 +1,16 @@
 {
   "expo": {
-    "name": "expoTest",
-    "description": "A very interesting project.",
-    "slug": "expoTest",
+    "name": "testExpo",
+    "description": "This project is really great.",
+    "slug": "testExpo",
     "privacy": "public",
     "sdkVersion": "25.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
