--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+  },
+  "devDependencies": {
+    "react-native-system-setting": "^1.7.0"
   }
 }
